# fifa-fantasy-team-optimizer

./: .gitignore  README.md  players.csv  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: sample_prices.csv
src/fantasy/: __init__.py  __main__.py  rules.py
src/fantasy/data/: __init__.py  seed.py
src/fantasy/ingest/: __init__.py  countries.py  fbref.py  matching.py  prices.py  schema.py  storage.py
src/fantasy/optimize/: __init__.py  squad.py  transfers.py
src/fantasy/pipeline/: __init__.py  live.py  run.py
src/fantasy/projection/: __init__.py  backtest.py  minutes.py  model.py
src/fantasy/scoring/: __init__.py  engine.py
tests/: test_fbref.py  test_matching.py  test_optimize.py  test_pipeline.py  test_projection.py  test_scoring.py
